# ArcStreamLabs

./: .gitignore  .gitlab-ci.yml  Doxyconfig  README.md
ArcStreamLabs/: ArcStreamLabs.pro  CMakeLists.txt  Doxyfile  Ressources.qrc  arcstreamlab.cpp  arcstreamlab.h  colorimetry.cpp  colorimetry.h  filter.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  specialeffect.h
ArcStreamLabs/LibA/: CMakeLists.txt  liba_1.cpp  liba_1_tests.cpp
ArcStreamLabs/lib/LibCircularBuffer/: CMakeLists.txt  libcircularbuffer_1.cpp  libcircularbuffer_1.h  libcircularbuffer_1_tests.cpp
ArcStreamLabs/lib/LibUndoRedo/: CMakeLists.txt  actionmanager.cpp  actionmanager.h  undoableaction.h  undoredo.cpp  undoredo.h  undoredo_tests.cpp
ArcStreamLabs/src/: aboutdialog.cpp  aboutdialog.h  arcstreamlab.cpp  arcstreamlab.h  helper.cpp  helper.h  imageprocessing.cpp  imageprocessing.h  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  videostream.cpp  videostream.h
ArcStreamLabs/src/dialog/animation/: animation.cpp  animation.h  animationaction.cpp  animationaction.h  animationactions.cpp  animationactions.h  mustacheanimation.cpp  mustacheanimation.h  textanimation.cpp  textanimation.h
ArcStreamLabs/src/dialog/colorimetry/: colorimetry.cpp  colorimetry.h  colorimetryactions.cpp  colorimetryactions.h  colorimetryfilter.cpp  colorimetryfilter.h  colorimetrytabs.cpp  colorimetrytabs.h
ArcStreamLabs/src/dialog/filter/: filter.cpp  filter.h  filteractions.cpp  filteractions.h  longexposure.cpp  longexposure.h  sobelfilter.cpp  sobelfilter.h  stylizationfilter.cpp  stylizationfilter.h
ArcStreamLabs/src/dialog/specialEffect/: facialblureffect.cpp  facialblureffect.h  mirror.cpp  mirror.h  mosaicblureffect.cpp  mosaicblureffect.h  specialeffect.cpp  specialeffect.h  specialeffectactions.cpp  specialeffectactions.h
ArcStreamLabs/src/undo_redo/: actionmanager.cpp  actionmanager.h  undoableaction.h  undoableactiontest.cpp  undoableactiontest.h  undoredo_tests.cpp
build-ArcStreamLabs-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-ArcStreamLabs-Desktop_Qt_6_2_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
doc/: useCase.puml
doc/diagrams/: Acces_CircularBuffer_sequence.puml  Threads_sequence.puml  Undo_Redo.puml  access_circularBuffer_sequence.puml  circularBuffer_uml.pu  undo-redo_uml.drawio
doc/latex_report-main/: .gitignore  .gitlab-ci.yml  README.md  biblio.bib  content.tex  report.tex  structure_and_commands.tex  title.tex
doc/latex_report-main/chapters/: 11_limitation_perspectives.tex  1_abstract.tex  1_title.tex  2_glossaire.tex  2_remerciements.tex  3_introduction.tex  3_resume.tex  4_analyse.tex  5_conception.tex  6_realisation.tex  8_conception.tex  abstract.tex  analyse.tex  contributions.tex  implementation.tex  introduction.tex  resultats.tex
doc/latex_report-main/images/: WBS_Exemple.eps  WBS_Exemple.plantuml
